client create-react-app initial commit

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tree-markable",
+  "name": "tree-markable-server",
   "version": "1.0.0",
   "description": "tree-markable server",
   "main": "server.js",
