--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^12.3.0",
     "dotenv": "^8.2.0",
     "firebase": "^8.1.1",
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
