--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.2.0",
     "firebase": "^8.1.1",
     "leaflet": "^1.7.1",
+    "leaflet-geosearch": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.2",
