--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,8 @@
 	"description": "tree-markable server",
 	"main": "server.js",
 	"scripts": {
-		"start": "concurrently \"npm run server\" \"cd ../client && npm run start\"",
-		"server": "nodemon server.js",
-		"test": "npm test"
+		"start": "node server.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Justin Vendettuoli",
 	"license": "ISC",
