--- a/client/package.json
+++ b/client/package.json
@@ -1,57 +1,47 @@
 {
-  "name": "tree-markable-client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/data-grid": "^4.0.0-alpha.15",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.3.0",
-    "axios": "^0.21.1",
-    "dotenv": "^8.2.0",
-    "firebase": "^8.3.0",
-    "leaflet": "^1.7.1",
-    "leaflet-geosearch": "^3.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-leaflet": "^3.0.2",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-swipeable-views": "^0.13.9",
-    "redux": "^4.0.5",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "redux-devtools-extension": "^2.13.8"
-  }
+	"name": "tree-markable-client",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@material-ui/core": "^4.11.2",
+		"@material-ui/data-grid": "^4.0.0-alpha.15",
+		"@material-ui/icons": "^4.11.2",
+		"@material-ui/lab": "^4.0.0-alpha.57",
+		"@testing-library/jest-dom": "^5.11.6",
+		"@testing-library/react": "^11.2.2",
+		"@testing-library/user-event": "^12.3.0",
+		"axios": "^0.21.1",
+		"dotenv": "^8.2.0",
+		"firebase": "^8.3.0",
+		"leaflet": "^1.7.1",
+		"leaflet-geosearch": "^3.1.0",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-leaflet": "^3.0.2",
+		"react-redux": "^7.2.2",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.1",
+		"react-swipeable-views": "^0.13.9",
+		"redux": "^4.0.5",
+		"redux-persist": "^6.0.0",
+		"redux-thunk": "^2.3.0",
+		"web-vitals": "^0.2.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"proxy": "http://localhost:3001",
+	"eslintConfig": {
+		"extends": [ "react-app", "react-app/jest" ]
+	},
+	"browserslist": {
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+	},
+	"devDependencies": {
+		"redux-devtools-extension": "^2.13.8"
+	}
 }
