--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
 		"react-scripts": "4.0.1",
 		"react-swipeable-views": "^0.13.9",
 		"redux": "^4.0.5",
+		"redux-devtools-extension": "^2.13.8",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.3.0",
 		"web-vitals": "^0.2.4"
@@ -41,7 +42,5 @@
 		"production": [ ">0.2%", "not dead", "not op_mini all" ],
 		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
 	},
-	"devDependencies": {
-		"redux-devtools-extension": "^2.13.8"
-	}
+	"devDependencies": {}
 }
