--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "cd server && node server.js",
+		"dev": "cd server && concurrently \"nodemon server.js\" \"cd ../client && npm start\"",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"heroku-postbuild": "cd client && npm install && npm run build"
 	},
 	"author": "Justin Vendettuoli",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^0.21.1",
 		"concurrently": "^5.3.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
@@ -20,6 +22,8 @@
 		"morgan": "^1.10.0",
 		"nodemon": "^2.0.7",
 		"pg": "^8.5.1",
-		"supertest": "^6.0.1"
-	}
+		"supertest": "^6.0.1",
+		"uuid": "^8.3.2"
+	},
+	"jest": { "testPathIgnorePatterns": [ "config" ] }
 }
